Tue Aug 26 16:57:11 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- some header cleanup (do not define IRD, IPD, ARD, APD as types)
	- rename some field (parameter to prepare desc code)

Tue Aug 26 12:14:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - SQLSetDescField (fixed, quite rewritten)

Mon Aug 25 23:13:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: small fix for SQLGetDescField

Sun Aug 24 11:45:29 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - SQLGetDescField (fixed)

Sat Aug 23 12:55:38 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - SQLGetInfo (fixed and commented)

Mon Aug 18 20:42:37 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc_util.c: small DATE fix

Mon Aug 18 11:51:47 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/descriptor.c:
	- code for resize descriptor

Mon Aug 18 11:34:03 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/ctpublic.h  include/tds.h:
	* include/tdsiconv.h:
	- indent(1)

Fri Aug 15 10:14:57 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/mem.c: fix severe BUG using NUMERIC/BLOB parameters

Fri Aug 15 09:09:12 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/mem.c:
	- applyed Peter Deacon patch (transaction fix)
	* src/odbc/unittests/print.c:
	- revert commit, separated RAISEERROR test

Thu Aug 14 23:00:52 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c src/tds/query.c:
	* src/tds/read.c src/tds/token.c win32/initnet.c: